gobmkida/c0/sgffile_begindump
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/sgffile_begindump/src/engine/sgffile.c:589:17: error: use of undeclared identifier 'sgffile_begindump_local_tree'
sgf_dumptree = &sgffile_begindump_local_tree; 
                ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/sgffile_begindump/src/obj/1/sgffile.o] Error 1
